data/collection/fixes/descriptions/scala/scala-10350
```sh
% java -version
java version "1.8.0_121"
Java(TM) SE Runtime Environment (build 1.8.0_121-b13)
Java HotSpot(TM) 64-Bit Server VM (build 25.121-b13, mixed mode)

% scalac -version
Scala compiler version 2.12.2 -- Copyright 2002-2017, LAMP/EPFL and Lightbend, Inc.
```

### `foo/Foo.java`
```java
package foo;

public interface Foo {
  static Foo create(java.lang.String val) { return null; }
}
```

### `foo/java/Baz.java`
```java
package foo.java;
interface Baz {}
```

### `bar/Bar.scala`
```scala
package bar

object Bar {
  def xxx(s: String): foo.Foo = { foo.Foo.create(s) }
}
```

### output
```sh
% scalac bar/Bar.scala foo/Foo.java foo/java/Baz.java
foo/Foo.java:4: error: object lang is not a member of package foo.java
  static Foo create(java.lang.String val) { return null; }
                         ^
one error found
```